--- a/hw3/package.json
+++ b/hw3/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest"
+    "test": "jest -–env=jsdom"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,9 +12,11 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jquery": "^4.0.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0"
   }
 }
